# docvision-rag

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: streamlit_app.py
configs/: default.yaml
docs/: architecture.md
eval/: questions.example.jsonl  run_eval.py
mrag/: cli.py  config.py
mrag/index/: faiss_image.py  faiss_text.py
mrag/ingest/: chunking.py  pdf.py
mrag/models/: image_embed.py  qwen2_vl.py  rerank.py  text_embed.py
mrag/retrieval/: hybrid.py
mrag/storage/: manifest.py
